--- a/app/globals.css
+++ b/app/globals.css
@@ -201,7 +201,7 @@ body {
   }
 
   .btn-mic {
-    @apply border-2 border-black rounded-lg flex flex-col gap-2 items-center py-8 max-sm:py-2 cursor-pointer w-full;
+    @apply bg-background text-primary border-2  rounded-lg flex flex-col gap-2 items-center py-8 max-sm:py-2 cursor-pointer w-full;
   }
 
   .transcript {
